Correct z-index positioning

--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -46,7 +46,7 @@
 
   .bg-image {
     position: absolute;
-    z-index: 0;
+    z-index: -1;
     height: 100%;
     width: 100%;
     background-position: top center;
@@ -57,20 +57,22 @@
   .overlay {
     background-color: $main-overlay;
     @include overlay-style;
+    z-index: -1;
   }
 
   .background-styles {
     background-color: palevioletred;
     position: absolute;
-    z-index: -1;
     height: 100%;
     width: 100%;
     object-fit: cover;
+    z-index: -2;
   }
 
   .device2 {
-        position: relative;
+    position: relative;
     opacity: 1;
+    z-index: 999;
 
       .iphone-svg-image {
         position: absolute;
@@ -132,6 +134,7 @@
   .device {
     position: relative;
     opacity: 1;
+    z-index: 999;
 
     .laptop-image {
       max-width: 100%;
